fix some layout issues with images and galleries

--- a/styles/ghost.scss
+++ b/styles/ghost.scss
@@ -81,7 +81,7 @@
 }
 
 .ghost-content .kg-image-card {
-    margin: 0;
+    // margin: 0;
     display: flex;
     flex-direction: column;
 
@@ -109,6 +109,7 @@
     .kg-gallery-container {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .kg-gallery-row {
